@@ -967,10 +967,10 @@ void mode7flipbank() {
   
   if (screenmode == 7) {
     mytime=mos_centiseconds();
-    if (vduflag(MODE7_UPDATE) && ((mytime-m7updatetimer) > 2)) {
+    //if (vduflag(MODE7_UPDATE) && ((mytime-m7updatetimer) > 2)) {
       for (ypos=0; ypos<=24; ypos++) if (mode7changed[ypos]) mode7renderline(ypos);
       m7updatetimer=mytime;
-    }
+    //}
     if ((mode7timer - mytime) <= 0) {
       hide_cursor();
       if (!vduflag(MODE7_UPDATE)) mode7renderscreen();
